feat: スマホUI改善、編集・削除アイコン追加、公開/非公開列追加

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@prisma/client": "^6.19.0",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "prisma": "^6.19.0",
     "react": "19.2.0",
